# kafka-client-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: simple_consumer.cpp  simple_producer.cpp
include/: consumer.hpp  producer.hpp
src/: consumer.cpp  producer.cpp
